<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">y60 Device Controller</string>
    <string name="jetty_started">Device Controller started</string>
    <string name="jetty_not_started">Device Controller not started</string>
    <string name="jetty_already_started">Device Controller already running</string>
    <string name="jetty_stopped">Device Controller stopped</string>
    <string name="jetty_not_stopped">Device Controller not stopped</string>
    <string name="jetty_not_running">Device Controller not running</string>
    <string name="manage_jetty">Manage Device Controller</string>
    <string name="jetty_controller">Start and Stop Device Controller</string>
    <string name="jetty_downloader">Enter URL</string>
    <string name="start_jetty">Start Device Controller</string>
    <string name="stop_jetty">Stop Device Controller</string>
    <string name="config_jetty">Configure</string>
    <string name="start_download">Download</string>
    <string name="download_webapp">Download</string>
    <string name="url">URL</string>
    <string name="interfaces">Known IP Addresses</string>
    <string name="pref_nio_value">false</string>
    <string name="pref_nio_title">Use NIO</string>
    <string name="pref_nio_key">com.artcom.y60.infrastructure.dc.pref_nio</string>
    <string name="pref_port_value">4042</string>
    <string name="pref_port">Port</string>
    <string name="pref_port_title">Edit Port</string>
    <string name="pref_port_key">com.artcom.y60.infrastructure.dc.pref.port</string>
    <string name="pref_console_pwd_value">admin</string>
    <string name="pref_console_pwd">Console Password</string>
    <string name="pref_console_pwd_title">Edit Console Password</string>
    <string name="pref_console_pwd_key">com.artcom.y60.infrastructure.dc.pref.pwd</string>
    <string name="edit_preferences">Edit Device Controller Settings</string>
    <string name="webapp_exists">Already Exists</string>
    <string name="download_fail">Download Failed.</string>
    <string name="download_success">Web app installed.</string>
    <string name="success">Success.</string>
    <string name="failure">Failure</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="overwrite">Replace existing file?</string>
    <string name="loading">Loading ... </string>
    <string name="context_path">Context Path</string>
    <string name="gom_settings_title">GOM settings</string>
	<string name="gom_location_title">GOM Location</string>
	<string name="device_settings_title">Device Settings</string>
	<string name="device_id_title">Device ID</string>
    <string name="pref_gom_location">pref_gom_location</string>
	<string name="pref_device_id">pref_device_id</string>
	<string name="device_path_title">GOM Path to Devices</string>
	<string name="gom_paths_title">GOM Paths</string>
	<string name="pref_device_path">pref_device_path</string>
</resources>
