<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceCategory android:title="@string/gom_settings_title">
    <EditTextPreference
        android:key="@string/pref_gom_location"
        android:defaultValue="http://t-gom.service.t-gallery.act"
        android:title="@string/gom_location_title"/>
  </PreferenceCategory>
  <PreferenceCategory android:title="@string/device_settings_title">
    <EditTextPreference
        android:key="@string/pref_device_id"
        android:defaultValue="1"
        android:title="@string/device_id_title"/>
  </PreferenceCategory>
    <PreferenceCategory android:title="@string/gom_paths_title">
    <EditTextPreference
        android:key="@string/pref_device_path"
        android:defaultValue="/devices/mobile"
        android:title="@string/device_path_title"/>
  </PreferenceCategory>
</PreferenceScreen>
